# NRIFramework

./: .gitignore  .gitmodules  1-Deploy.sh  4-Clean.bat  4-Clean.sh  CMakeLists.txt  Dependencies.xml  README.md
Include/: Camera.h  CmdLine.h  Controls.h  Helper.h  NRIFramework.h  SampleBase.h  Timer.h  Utils.h
Shaders/: Shaders.cfg  UI.fs.hlsl  UI.vs.hlsl
Shaders/Include/: BindingBridge.hlsli
Source/: Camera.cpp  DebugAllocator.cpp  Helper.cpp  SampleBase.cpp  Timer.cpp  Utils.cpp
